code V.4 : Do ssss

--- a/test2.html
+++ b/test2.html
@@ -33,7 +33,8 @@
         SAU
     </a>
     <br><br>
-    <a href="http://" target="_blank"><img src="./images/img2.jpg" height="150" alt=""></a>
+    <a href="http://" target="_blank"><img src="./images/img2.jpg" height="150" alt="">
+    </a>
     <br>
     
 </body>
